refactor(plugin): 重构插件处理逻辑和结果返回机制
- 修改插件处理方法返回类型为 PluginResult
- 增加 PluginResult 类统一处理结果
- 优化插件管理器处理逻辑
- 调整插件顺序和优先级
- 修复部分插件逻辑问题